Modernised the UI a little

--- a/Maptest/Maptest/Info.plist
+++ b/Maptest/Maptest/Info.plist
@@ -26,6 +26,8 @@
 	<string>Just press OK or rot in hell</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Just press OK or rot in hell</string>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
